2017-11-11  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Add test for longest matching scheme to all tests.

	* tests/test-simple.sh:
	* tests/test-long.sh:
	* tests/test-mixed.sh:
	* tests/test-utf8-wbr.sh:
	* tests/test-latex.sh:
	  - Repeat all tests one more time, with different -m option.
	    (This seems to catch an error on longest matching.)

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove excessive LinkSep terminator.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Remove extra LinkSep[] terminator assignment.
	    Only one is enough.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Adjust SwapLinkSep() loop more.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Rename variables: st_idx -> start; en_idx -> end.
	  - Instead of saving 'end' and directly iterating on it,
	    define another 'upper' iterator for that purpose.
	    Then, 'end' value can be used at the end.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify SwapLinkSep() loop.

	* src/abswordseg.cpp (AbsWordSeg::SwapLinkSep()):
	  - Move en_idx, end_point, tmp vars inside loop
	    where they are used. Only st_idx is left on top level.
	  - No more en_idx assignment at loop end.
	  - Stop en_idx exactly at LinkSep[] element with value -1,
	    not the one after.
	  - Simply assign end_point as saved storage of en_idx value.
	    No computation is needed.
	  - Simply decrement en_idx to get the last non-terminate element.
	    No confusing skip by 2.
	  - Simplify the swap code inside inner while-loop.

2017-11-10  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Set IdxSep[] on every char instead of relying on defaults.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Instead of skipping IdxSep[i] assignments and relying on
	    initial values on some chars, let's assign them explicitly.

	* src/abswordseg.cpp (AbsWordSeg::WordSeg()):
	  - Remove now-unneeded InitData() call.